Fix non iOs home styling

--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -48,7 +48,7 @@
 
             @include breakpoint( mobile-all ) {
 
-                font-size: 2rem;
+                font-size: 1.7rem;
 
                 .is-ios.is-mobile & {
 
